# django-studies

./: .bumpversion.cfg  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
changelog.d/: 1.feature.rst  2.bugfix.rst  3.bugfix.rst  3.misc.rst  5.bugfix.rst
demo/: manage.py
demo/app/: overrides.py  urls.py  views.py
demo/demo/: asgi.py  settings.py  urls.py  wsgi.py
src/studies/: __init__.py  admin.py  apps.py  experiments.py  models.py  proxies.py  trials.py  validators.py
src/studies/migrations/: 0001_initial.py
tests/: test_experiments.py  test_models.py  test_validation.py
