[metadata]
name = django-studies
version = attr: studies.__version__
description = Run experiments in you Django project
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Django, experiments
author = Filip Todić
author_email = todic.filip@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/fitodic/django-studies
platforms = POSIX, Microsoft, MacOS
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP

[paths]
source =
    src/studies
    .tox/*/lib/python*/site-packages/studies

[options]
python_requires = >= 3.10
zip_safe = False
include_package_data = True
install_requires =
    Django>=3.2
    laboratory>=1.0

[options.extras_require]
dev =
    tox
lint =
    isort
    black
    flake8
test =
    pytest>=3.0
    pytest-cov
    pytest-django
    pytest-runner
docs =
    mkdocs==0.13.2

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[tool:pytest]
DJANGO_SETTINGS_MODULE=demo.settings.test
addopts =
    --cov-config .coveragerc
    --cov-report term
    -p no:warnings
django_find_project = false
testpaths = tests

[coverage:run]
branch = True
source = studies

[coverage:report]
show_missing = True
omit =
    .tox/*
    studies/migrations/*
    tests/*
    setup.py

[coverage:paths]
source =
    src/

[isort]
# Reference: https://github.com/timothycrosley/isort/wiki/isort-Settings
atomic=true
force_grid_wrap=0
include_trailing_comma=true
multi_line_output=3
line_length=79
lines_after_imports=2
lines_between_types=1
known_django=django
known_third_party=mock,pytz,faker,model_utils,responses,factory
known_first_party=studies
skip=.git,__pycache__,docs,.tox,migrations,requirements,venv,.venv,wsgi.py,bin,changelogs,example
sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
use_parentheses=True
